- Preparing sample data for test training - Added logic for writing to ElasticSearch and MongoDb - Created small FastAPI for product retrieval and search

--- a/ingestion/requirements.txt
+++ b/ingestion/requirements.txt
@@ -1,7 +1,13 @@
+sentence-transformers[train]>=2.7.0
+torch>=2.0.0
+transformers>=4.30.0
+datasets>=2.14.0
+accelerate>=0.21.0
+scikit-learn
+tqdm
 pandas
-kagglehub[pandas-datasets]
+numpy
+deep-translator
+elasticsearch>=8.0.0
 pymongo
-elasticsearch
-googletrans==4.0.0rc1
-sentence-transformers
-pydantic
+kagglehub
